--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <header>
         <nav class="nav">
-            <img  class="logo" src="img/logo.jpg" alt="Logo">
+            <img class="logo" src="img/logo.jpg" alt="Logo">
             <span class="logo-1">Lark Homes</span>
 
-            <a href="">Homa</a>
+            <a href="">Home</a>
             <a href="">Listing</a>
             <span class="triangulo"><i class="bi bi-caret-down-fill"></i></span>
             <a href="">Services</a>
@@ -29,9 +29,44 @@
             <button class="btn-get">Get a Quote</button>
         </nav>
 
-
         </div>
     </header>
+    <!-- Final del navegador -->
+    <!-- Comienzo del main- primer seccion -->
+    <main>
+        <div class="giro">
+            <div class="caja-1">
+                <h1 class="titulo-1">Bring Your Family´s</h1>
+                <h1 class="titulo-1">Happiness to your</h1>
+                <h1 class="titulo-1">Dream House</h1>
+                <p class="parrafo-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium nemo maiores mollitia enim
+                    tempora
+                    hic nam totam perferendis, voluptatum.</p>
+                <input class="input-1" type="text" placeholder="Search Here">
+                <span class="search"><i class="bi bi-search"></i></span>
+                <button class="btn-search">Search</button>
+                <div class="caja-2">
+                    <div>
+                        <h2 class="titulo-2">280+</h2>
+                        <h5 class="subtitulo">Awards Winning</h5>
+                    </div>
+                    <div>
+                        <h2 class="titulo-2">78+</h2>
+                        <h5 class="subtitulo">Property Ready</h5>
+                    </div>
+                    <div>
+                        <h2 class="titulo-2">298+</h2>
+                        <h5 class="subtitulo">Happy Customers</h5>
+                    </div>
+                </div>
+            </div>
+            <div >
+                <img class="img-1" src="img/casa-1.jpg" alt="">
+            </div>
+        </div>
+
+    </main>
+
 </body>
 
 </html>
