segunda parte del cuerpo

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                 <h1 class="titulo-1">Bring Your Family´s</h1>
                 <h1 class="titulo-1">Happiness to your</h1>
                 <h1 class="titulo-1">Dream House</h1>
-                <p class="parrafo-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium nemo maiores mollitia enim
+                <p class="parrafo-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium nemo maiores
+                    mollitia enim
                     tempora
                     hic nam totam perferendis, voluptatum.</p>
-                <input class="input-1" type="text" placeholder="Search Here">
+                <input class="input-1" type="text" id="search" name="search" placeholder="Search Here">
                 <span class="search"><i class="bi bi-search"></i></span>
                 <button class="btn-search">Search</button>
                 <div class="caja-2">
@@ -60,13 +61,48 @@
                     </div>
                 </div>
             </div>
-            <div >
+            <div>
                 <img class="img-1" src="img/casa-1.jpg" alt="">
             </div>
         </div>
+        <!-- Final del giro -->
+        <!-- Comienzo de Featured Listing -->
+        <div class="contenedor">
+            <div class="indo">
+                <h2 class="indo_tit">Featured Listing</h2>
+                <p class="indo_p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero molestiae autem
+                    voluptate iste dolor
+                    aliquam corrupti quia sint.</p>
+            </div>
+            <div class="indo_img">
+                <img class="img_precio" src="img/casita-1.jpg" alt="Ataz">
+                <img class="img_precio" src="img/casita-2.jpg" alt="Qiri">
+                <img class="img_precio" src="img/casita-3.jpg" alt="Qanan">
+                <img class="img_precio" src="img/casita-4.jpg" alt="Tingah">
+            </div>
+            <div class="house">
+                <h2 class="ataz">Ataz Standard <br>House</h2>
+                <h2 class="qiri">Qiri Minimalist <br>House</h2>
+                <h2 class="qanan">Qanan Luxury <br> House</h2>
+                <h2 class="tina">Tingah Elegant <br> House</h2>
+            </div>
+            <div class="map-1">
+                <span class="map"><i class="bi bi-geo-alt-fill"> </i></span>
+                <span class="map"><i class="bi bi-geo-alt-fill"> </i></span>
+                <span class="map"><i class="bi bi-geo-alt-fill"> </i></span>
+                <span class="map"><i class="bi bi-geo-alt-fill"> </i></span>
+            </div>
+            <div class="street">
+                <span class="street-1">Pluto Street, Indonesia</span>
+                <span class="street-1">Jupiter Street, Indonesia</span>
+                <span class="street-1">Mars Street, Indonesia</span>
+                <span class="street-1">Venus Street, Indonesia</span>
 
+
+            </div>
+        </div>
     </main>
-
+        
 </body>
 
 </html>
