--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class="logo-1">Lark Homes</span>
 
             <a href="">Home</a>
-            <a href="">Listing</a>
+            <a href="#">Listing</a>
             <span class="triangulo"><i class="bi bi-caret-down-fill"></i></span>
             <a href="">Services</a>
             <a href="">Blog</a>
@@ -43,7 +43,7 @@
                     mollitia enim
                     tempora
                     hic nam totam perferendis, voluptatum.</p>
-                <input class="input-1" type="text" id="search" name="search" placeholder="Search Here">
+                <input type="text" id="search" name="search" class="input-1" placeholder="Search Here">
                 <span class="search"><i class="bi bi-search"></i></span>
                 <button class="btn-search">Search</button>
                 <div class="caja-2">
@@ -67,6 +67,7 @@
         </div>
         <!-- Final del giro -->
         <!-- Comienzo de Featured Listing -->
+
         <div class="contenedor">
             <div class="indo">
                 <h2 class="indo_tit">Featured Listing</h2>
@@ -97,12 +98,31 @@
                 <span class="street-1">Jupiter Street, Indonesia</span>
                 <span class="street-1">Mars Street, Indonesia</span>
                 <span class="street-1">Venus Street, Indonesia</span>
-
-
+            </div>
+        </div>
+        <!-- Fin del sector listing -->
+        <!-- Sector de p y button -->
+        <div class="more">
+            <p class="more-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente harum molestias non sint
+                nemo mollitia sequi excepturi earum voluptatem nam. </p>
+            <button class="more-2">See More</button>
+        </div>
+        <!-- Fin del sector p y button -->
+        <!-- Comienzo de sector mision y vision -->
+        <div class="vision">
+            <div class="vision2">
+                <h2 class="vision-tit">Our Vision</h2>
+                <p class="vision-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, officia vitae debitis explicabo deleniti porro odit suscipit mollitia impedit optio voluptate rerum eaque sit. Sed quidem libero totam quas nihil.Sed quidem libero totam quas nihil?</p>
+                <img class="vision-img" src="img/vision.jpg" alt="Vision">
+            </div>
+            <div class="mision">
+                <img class="mision-img" src="img/mision.jpg" alt="">
+                <h2 class="mision-tit">Our Mission</h2>
+                <p class="mision-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus consectetur fugiat consequuntur accusamus excepturi ad placeat quae quis qui doloremque, voluptatum sapiente officia minima facere nulla alias obcaecati asperiores quas!</p>
             </div>
         </div>
     </main>
-        
+
 </body>
 
 </html>
