retoques y agregado del ultimo div

--- a/index.html
+++ b/index.html
@@ -112,14 +112,24 @@
         <div class="vision">
             <div class="vision2">
                 <h2 class="vision-tit">Our Vision</h2>
-                <p class="vision-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, officia vitae debitis explicabo deleniti porro odit suscipit mollitia impedit optio voluptate rerum eaque sit. Sed quidem libero totam quas nihil.Sed quidem libero totam quas nihil?</p>
+                <p class="vision-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, officia vitae
+                    debitis explicabo deleniti porro odit suscipit mollitia impedit optio voluptate rerum eaque sit. Sed
+                    quidem libero totam quas nihil.Sed quidem libero totam quas nihil?</p>
                 <img class="vision-img" src="img/vision.jpg" alt="Vision">
             </div>
             <div class="mision">
                 <img class="mision-img" src="img/mision.jpg" alt="">
                 <h2 class="mision-tit">Our Mission</h2>
-                <p class="mision-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus consectetur fugiat consequuntur accusamus excepturi ad placeat quae quis qui doloremque, voluptatum sapiente officia minima facere nulla alias obcaecati asperiores quas!</p>
+                <p class="mision-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus consectetur
+                    fugiat consequuntur accusamus excepturi ad placeat quae quis qui doloremque, voluptatum sapiente
+                    officia minima facere nulla alias obcaecati asperiores quas!</p>
             </div>
+        </div>
+        <!-- fin de mision y vision -->
+        <div class="step">
+            <h1 class="step-t">Easy Step to Buy Property <br> on Dhalem Real Estate</h1>
+            <p class="step-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor maxime officia cupiditate
+                necessitatibus harum nostrum sit illum asperiores magnam. </p>
         </div>
     </main>
 
