modificacion de imaenes y  paddings

--- a/index.html
+++ b/index.html
@@ -75,31 +75,34 @@
                     voluptate iste dolor
                     aliquam corrupti quia sint.</p>
             </div>
-            <div class="indo_img">
-                <img class="img_precio" src="img/casita-1.jpg" alt="Ataz">
-                <img class="img_precio" src="img/casita-2.jpg" alt="Qiri">
-                <img class="img_precio" src="img/casita-3.jpg" alt="Qanan">
-                <img class="img_precio" src="img/casita-4.jpg" alt="Tingah">
-            </div>
-            <div class="house">
-                <h2 class="ataz">Ataz Standard <br>House</h2>
-                <h2 class="qiri">Qiri Minimalist <br>House</h2>
-                <h2 class="qanan">Qanan Luxury <br> House</h2>
-                <h2 class="tina">Tingah Elegant <br> House</h2>
-            </div>
-            <div class="map-1">
-                <span class="map"><i class="bi bi-geo-alt-fill"> </i></span>
-                <span class="map"><i class="bi bi-geo-alt-fill"> </i></span>
-                <span class="map"><i class="bi bi-geo-alt-fill"> </i></span>
-                <span class="map"><i class="bi bi-geo-alt-fill"> </i></span>
-            </div>
-            <div class="street">
-                <span class="street-1">Pluto Street, Indonesia</span>
-                <span class="street-1">Jupiter Street, Indonesia</span>
-                <span class="street-1">Mars Street, Indonesia</span>
-                <span class="street-1">Venus Street, Indonesia</span>
+            <div class="casitas">
+                <div>
+                    <img src="img/casita-1.jpg" alt="Ataz">
+                    <h2 class="ataz">Ataz Standard <br>House</h2>
+                    <span class="geo"><i class="bi bi-geo-alt-fill"> </i></span>
+                    <span class="geo">Pluto Street, Indonesia</span>
+                </div>
+                <div>
+                    <img src="img/casita-2.jpg" alt="Qiri">
+                    <h2 class="ataz">Qiri Minimalist <br>House</h2>
+                    <span class="geo"><i class="bi bi-geo-alt-fill"> </i></span>
+                    <span class="geo">Jupiter Street, Indonesia</span>
+                </div>
+                <div>
+                    <img src="img/casita-3.jpg" alt="Qanan">
+                    <h2 class="ataz">Qanan Luxury <br> House</h2>
+                    <span class="geo"><i class="bi bi-geo-alt-fill"> </i></span>
+                    <span class="geo">Mars Street, Indonesia</span>
+                </div>
+                <div>
+                    <img src="img/casita-4.jpg" alt="Tingah">
+                    <h2 class="ataz">Tingah Elegant <br> House</h2>
+                    <span class="geo"><i class="bi bi-geo-alt-fill"> </i></span>
+                    <span class="geo">Venus Street, Indonesia</span>
+                </div>
             </div>
         </div>
+
         <!-- Fin del sector listing -->
         <!-- Sector de p y button -->
         <div class="more">
@@ -130,6 +133,36 @@
             <h1 class="step-t">Easy Step to Buy Property <br> on Dhalem Real Estate</h1>
             <p class="step-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor maxime officia cupiditate
                 necessitatibus harum nostrum sit illum asperiores magnam. </p>
+        </div>
+        <!-- Comienzo de view listing -->
+        <div class="view">
+            <div class="uno">
+                <div class="num">1.</div>
+                <div class="view-name">View Listing</div>
+                <div class="view-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam tempore suscipit modi
+                    cum, dolorum fugit minus.</div>
+
+
+            </div>
+            <div class="dos">
+                <div class="num">2.</div>
+                <div class="view-name">Contact Us</div>
+                <div class="view-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam tempore suscipit modi
+                    cum, dolorum fugit minus.</div>
+
+            </div>
+            <div class="tres">
+                <div class="num">3. </div>
+                <div class="view-name">Request a Visit</div>
+                <div class="view-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam tempore suscipit modi
+                    cum, dolorum fugit minus.</div>
+            </div>
+            <div class="cuatro">
+                <div class="num">4. </div>
+                <div class="view-name">Buy the House</div>
+                <div class="view-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam tempore suscipit modi
+                    cum, dolorum fugit minus.</div>
+            </div>
         </div>
     </main>
 
