avance de sccion-needs y customer

--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
             </div>
             <div class="casitas">
                 <div>
-                    <img src="img/casita-1.jpg" alt="Ataz">
+                    <img class="casitas-img" src="img/casita-1.jpg" alt="Ataz">
                     <h2 class="ataz">Ataz Standard <br>House</h2>
                     <span class="geo"><i class="bi bi-geo-alt-fill"> </i></span>
                     <span class="geo">Pluto Street, Indonesia</span>
                 </div>
                 <div>
-                    <img src="img/casita-2.jpg" alt="Qiri">
+                    <img class="casitas-img" src="img/casita-2.jpg" alt="Qiri">
                     <h2 class="ataz">Qiri Minimalist <br>House</h2>
                     <span class="geo"><i class="bi bi-geo-alt-fill"> </i></span>
                     <span class="geo">Jupiter Street, Indonesia</span>
                 </div>
                 <div>
-                    <img src="img/casita-3.jpg" alt="Qanan">
+                    <img class="casitas-img" src="img/casita-3.jpg" alt="Qanan">
                     <h2 class="ataz">Qanan Luxury <br> House</h2>
                     <span class="geo"><i class="bi bi-geo-alt-fill"> </i></span>
                     <span class="geo">Mars Street, Indonesia</span>
                 </div>
                 <div>
-                    <img src="img/casita-4.jpg" alt="Tingah">
+                    <img class="casitas-img" src="img/casita-4.jpg" alt="Tingah">
                     <h2 class="ataz">Tingah Elegant <br> House</h2>
                     <span class="geo"><i class="bi bi-geo-alt-fill"> </i></span>
                     <span class="geo">Venus Street, Indonesia</span>
@@ -107,7 +107,7 @@
         <!-- Sector de p y button -->
         <div class="more">
             <p class="more-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente harum molestias non sint
-                nemo mollitia sequi excepturi earum voluptatem nam. </p>
+                nemo mollitia sequi sequ voluptatem nam. </p>
             <button class="more-2">See More</button>
         </div>
         <!-- Fin del sector p y button -->
@@ -141,15 +141,12 @@
                 <div class="view-name">View Listing</div>
                 <div class="view-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam tempore suscipit modi
                     cum, dolorum fugit minus.</div>
-
-
             </div>
             <div class="dos">
                 <div class="num">2.</div>
                 <div class="view-name">Contact Us</div>
                 <div class="view-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam tempore suscipit modi
                     cum, dolorum fugit minus.</div>
-
             </div>
             <div class="tres">
                 <div class="num">3. </div>
@@ -163,6 +160,52 @@
                 <div class="view-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam tempore suscipit modi
                     cum, dolorum fugit minus.</div>
             </div>
+        </div>
+        <!-- final del view listing -->
+        <div class="more">
+            <p class="more-1" class="more-3">Lorem ipsum dolor sit amet consectetur adipisicing elit harum molestias
+                sint
+                nemo mollitia sequi excepturi sinit earumearum. </p>
+            <button class="more-2" class="more-4">See Our FAQ</button>
+        </div>
+        <!-- comienzo de why choose us for your house needs -->
+
+        <div class="needs">
+            <div class="needs-2">
+                <h1 class="needs-t1">Why Choose Us for your <br>House Needs</h1>
+                <p class="needs-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae tempore
+                    quas nesciunt quam possimus enim expedita velit. </p>
+                <div class="check" class="check-2">
+                    <span class="tilde"><i class="bi bi-check-circle-fill"></i></span>
+                    <h2 class="needs-t2">Comfortable Home Design</h2>
+                </div>
+                <p class="needs-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                    tempore quas nesciunt quam possimus enim expedita velit.</p>
+
+                <div class="check">
+                    <span class="tilde"><i class="bi bi-check-circle-fill"></i></span>
+                    <h2 class="needs-t2">Professional Developer</h2>
+                </div>
+                <p class="needs-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                    tempore quas nesciunt quam possimus enim expedita velit.</p>
+
+                <div class="check">
+                    <span class="tilde"><i class="bi bi-check-circle-fill"></i></span>
+                    <h2 class="needs-t2">Fast Response</h2>
+                </div>
+                <p class="needs-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                    tempore quas nesciunt quam possimus enim expedita velit.</p>
+
+            </div>
+            <div class="needs-img">
+                <img class="needs-img2" src="img/needs.jpg" alt="Needs">
+            </div>
+        </div>
+        <!-- final de why choose -->
+        <div class="customers">
+            <h1 class="customers-t">What Says from Our Happy <br> Customers</h1>
+            <p class="customers-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                tempore quas nesciunt quam possimus enim expedita velit.</p>
         </div>
     </main>
 
