terminado sin revision

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="img">
                 <img class="img-1" src="img/casa-1.jpg" alt="">
             </div>
         </div>
@@ -106,8 +106,9 @@
         <!-- Fin del sector listing -->
         <!-- Sector de p y button -->
         <div class="more">
-            <p class="more-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente harum molestias non sint
-                nemo mollitia sequi sequ voluptatem nam. </p>
+            <p class="more-1">Lorem ipsum dolor sit sit amet amet consectetur adipisicing elit. Sapiente harum molestias
+                non sint
+                nemo mollitia sequi sequ. </p>
             <button class="more-2">See More</button>
         </div>
         <!-- Fin del sector p y button -->
@@ -207,8 +208,95 @@
             <p class="customers-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
                 tempore quas nesciunt quam possimus enim expedita velit.</p>
         </div>
-    </main>
 
+        <!-- Comienzo de caras -->
+
+        <div class="shoo">
+            <div>
+                <p class="shoo-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                    tempore quas nesciunt quam possimus.</p>
+                <img class="shoo-img" src="img/cara-1.jpg" alt="cara-1">
+            </div>
+            <div>
+                <p class="shoo-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                    tempore quas nesciunt quam possimus.</p>
+                <img class="shoo-img" src="img/cara-4.jpg" alt="cara2">
+            </div>
+            <div>
+                <p class="shoo-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                    tempore quas nesciunt quam possimus.</p>
+                <img class="shoo-img" src="img/cara-3.jpg" alt="cara3">
+            </div>
+            <div>
+                <p class="shoo-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                    tempore quas nesciunt quam possimus.</p>
+                <img class="shoo-img" src="img/cara-2.jpg" alt="cara4">
+            </div>
+        </div>
+        <div class="mhan">
+            <h5 class="phar">Shoo Phar Mhan</h5>
+            <h5 class="dhie">Shoo Phar Dhie</h5>
+            <h5 class="thi">Shoo Yha Thi</h5>
+            <h5 class="nhi">Shoo Mhar Nhi</h5>
+        </div>
+        <div class="kang">
+            <h6 class="masak">Kang Masak</h6>
+            <h6 class="bakso">Kang Bakso</h6>
+            <h6 class="nogomel">Kang Nogomel</h6>
+            <h6 class="gombal">Kang Gombal</h6>
+        </div>
+        <!-- Fin de caras -->
+        <!-- Comienzo de dream -->
+        <div class="dream">
+            <div>
+                <img class="dream-img" src="img/dream.jpg" alt="dream">
+            </div>
+            <div class="dream-2">
+                <h1 class="dream-t">Let´s Move to Your <br> Dream Family Home</h1>
+                <p class="dream-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                    tempore quas nesciunt quam possimus.</p>
+                <button class="btn-dream">Get Quote Now</button>
+                <div class="img3">
+                    <img src="img/dream-1.jpg" alt="dream1">
+                    <img src="img/dream-2.jpg" alt="dream2">
+                    <img src="img/dream-3.jpg" alt="dream3">
+                </div>
+            </div>
+        </div>
+        <!-- fin del dream -->
+    </main>
+    <footer>
+        <div class="foot">
+            <div>
+                <img class="foot-img" src="img/logo.jpg" alt="logo">
+                <span class="foot-logo">Lark Homes</span>
+                <p class="foot-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit vitae
+                    tempore quas nesciunt quam possimus.</p>
+            </div>
+            <div class="usefull">
+                <h5 class="usefull-5">Usefull Links</h5>
+                <span class="team">Listing</span>
+                <span class="team">About Us</span>
+                <span class="team">Contact Us</span>
+                <span class="team">Our Team</span>
+            </div>
+            <div class="touch">
+                <h5 class="touch5">Get in Touch</h5>
+
+                <span class="hello"><i class="bi bi-geo-alt-fill"></i>123 Anywhere Street,Any <br> City, 12345 ST,
+                    Indonesia</span>
+
+                <span class="hello"><i class="bi bi-telephone-fill"></i>+123 456 7890</span>
+
+                <span class="hello"><i class="bi bi-envelope-fill"></i>hello@larkhomes.com</span>
+            </div>
+            <div class="newsletter">
+                <h5 class="news-5">Newsletter</h5>
+                <input class="in5" type="email" id="email" name="email" placeholder=" Your Email">
+                <button class="btn-news">Submit</button>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
